--- a/cont.html
+++ b/cont.html
@@ -24,9 +24,9 @@
 
     <main>
         <h1>Contacto</h1>
-        <from>
+        <form>
             
-        </from>
+        </form>
 <!-- 
         Aca van los campos de contacto con bootstrap (email validado por JS) 
         Hay que linkear boostrap solo en el <head> de esta pagina
