--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="main-index">
-        <div><img class="portada" src="img/pantera-frente.jpg" alt=""></div>
+        <img class="portada" src="img/pantera-frente.jpg" alt="">
         <div class="portada">
             <h2>Pantera: un ícono ítalo-americano</h2>
             <p>El tercer modelo de producción de carretera de De Tomaso y el de mayor volumen fue el icónico Pantera. En 1970, el Pantera debutó con un nuevo concepto de diseño de gran volumen, que combinaba la potencia de un V8 americano con el característico estilo italiano y al mismo tiempo ofrecía un rendimiento excepcional a una fracción del precio de sus competidores.</p>
