--- a/media.html
+++ b/media.html
@@ -29,12 +29,12 @@
             <div><img src="img/1971_De_Tomaso_Pantera_1920x1440.jpg" alt="De Tomaso Pantera L"></div>
             <!--<div><img src="img/De_Tomaso_Pantera_hf_1920x1080.jpg" alt="De Tomaso Pantera GTS"></div>-->
             
-            <div><img src="img/165185168256729.jpg" alt="De Tomaso Pantera GTS"></div>
-            <div><img src="img/1991_De_Tomaso_Pantera_Si_front_right.jpg" alt="De Tomaso Pantera 90 Si"></div>
-            <div><img src="img/pantera-atras.jpg" alt="De Tomaso Pantera L"></div>
-            <!--<div><img src="img/De_Tomaso_Pantera_uu_1600x1200.jpg" alt="De Tomaso Pantera GTS"></div>-->
-            <div><img src="img/165184945970239.jpg" alt="De Tomaso Pantera GTS"></div>
-            <div><img src="img/1992_De_Tomaso_Pantera_Si_rear_right.jpg" alt="De Tomaso Pantera 90 Si"></div>
+            <div><img src="img/pantera-L-lateral.jpg" alt="De Tomaso Pantera L"></div>         
+            <div><img src="img/pantera-GTS-frente.jpg" alt="De Tomaso Pantera GTS"></div>
+            <div><img src="img/pantera-Si-frente.jpg" alt="De Tomaso Pantera 90 Si"></div>
+            <div><img src="img/pantera-L-atras.jpg" alt="De Tomaso Pantera L"></div>
+            <div><img src="img/pantera-GTS-atras.jpg" alt="De Tomaso Pantera GTS"></div>
+            <div><img src="img/pantera-Si-atras.jpg" alt="De Tomaso Pantera 90 Si"></div>
             <div><iframe src="https://www.youtube.com/embed/jy_TnTq7NEU?si=3ZAZNipRq-zigOxZ" allowfullscreen></iframe></div>
             <div><iframe src="https://www.youtube.com/embed/ofFtQOt_xC4?si=sYOdx5QJb8HGTGW-" allowfullscreen></iframe></div>
             <div><iframe src="https://www.youtube.com/embed/VrkFwBOR444?si=qXp920CQOMgkebFs" allowfullscreen></iframe></div>
