--- a/specs.html
+++ b/specs.html
@@ -26,7 +26,7 @@
         <h1>Performance</h1>
         <table>
             <tr>
-                <th>Ficha técnica</th>
+                <th>Parámetros</th>
                 <th>Pantera L (1971)</th>
                 <th>Pantera GT5 S (1988)</th>
             </tr>
