--- a/cont.html
+++ b/cont.html
@@ -13,13 +13,29 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="img/logo.png" alt="De Tomaso Automobili" height="35"></a>
-
-        <nav>
-            <a href="hist.html">Historia</a>
-            <a href="specs.html">Performance</a>
-            <a href="media.html">Galeria</a>
-            <a href="cont.html">Contacto</a>
+        <nav class="navbar navbar-expand-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="De Tomaso Automobili" height="35"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="hist.html">Historia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="specs.html">Performance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="media.html">Galería</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cont.html">Contacto</a>
+                        </li>                    
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
