--- a/contacto.html
+++ b/contacto.html
@@ -13,13 +13,13 @@
 <body>
     <header><!-- from include.js --></header>
 
-    <main id="mainIndex"><!-- from mainIndex.js --></main>
+    <main id="mainContacto"><!-- from mainContacto.js --></main>
 
     <footer><!-- from include.js --></footer>
 
     <!-- scripts -->
     <script src="https://kit.fontawesome.com/d0e70b3e2c.js" crossorigin="anonymous"></script>
     <script src="js/include.js"></script>
-    <script src="js/mainIndex.js"></script>
+    <script src="js/mainContacto.js"></script>
 </body>
 </html>
