--- a/media.html
+++ b/media.html
@@ -4,51 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Tomaso Pantera</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <a href="index.html"><img src="img/logo.png" alt="De Tomaso Automobili" height="35"></a>
+    <header><!-- from include.js --></header>
 
-        <nav>
-            <a href="hist.html">Historia</a>
-            <a href="specs.html">Performance</a>
-            <a href="media.html">Galeria</a>
-            <a href="cont.html">Contacto</a>
-        </nav>
-    </header>
+    <main id="mainMedia"><!-- from mainMedia.js --></main>
 
-    <main>
-        <h1>Galería</h1>
+    <footer><!-- from include.js --></footer>
 
-        <div class="grid-container">
-            <div><img src="img/pantera-L-lateral.jpg" alt="De Tomaso Pantera L"></div>
-            <div><img src="img/pantera-GTS-frente.jpg" alt="De Tomaso Pantera GTS"></div>
-            <div><img src="img/pantera-Si-frente.jpg" alt="De Tomaso Pantera 90 Si"></div>
-            <div><img src="img/pantera-L-atras.jpg" alt="De Tomaso Pantera L"></div>
-            <div><img src="img/pantera-GTS-atras.jpg" alt="De Tomaso Pantera GTS"></div>
-            <div><img src="img/pantera-Si-atras.jpg" alt="De Tomaso Pantera 90 Si"></div>
-            <div><iframe src="https://www.youtube.com/embed/jy_TnTq7NEU?si=3ZAZNipRq-zigOxZ" allowfullscreen></iframe></div>
-            <div><iframe src="https://www.youtube.com/embed/ofFtQOt_xC4?si=sYOdx5QJb8HGTGW-" allowfullscreen></iframe></div>
-            <div><iframe src="https://www.youtube.com/embed/VrkFwBOR444?si=qXp920CQOMgkebFs" allowfullscreen></iframe></div>
-        </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 - Grupo 14</p>
-        <div>
-            <i class='fab fa-html5'></i>
-            <i class='fab fa-css3-alt'></i>
-            <i class='fab fa-js-square'></i>
-            <i class='fab fa-github-square'></i>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
+    <!-- scripts -->
     <script src="https://kit.fontawesome.com/d0e70b3e2c.js" crossorigin="anonymous"></script>
+    <script src="js/include.js"></script>
+    <script src="js/mainMedia.js"></script>
 </body>
 </html>
