Uniforma nombres de archivo

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header><!-- from include.js --></header>
+    <header><!-- from headerFooter.js --></header>
 
     <main id="mainIndex"><!-- from mainIndex.js --></main>
 
-    <footer><!-- from include.js --></footer>
+    <footer><!-- from headerFooter.js --></footer>
 
     <!-- scripts -->
     <script src="https://kit.fontawesome.com/d0e70b3e2c.js" crossorigin="anonymous"></script>
-    <script src="js/include.js"></script>
+    <script src="js/headerFooter.js"></script>
     <script src="js/mainIndex.js"></script>
 </body>
 </html>
